--- a/package.json
+++ b/package.json
@@ -45,17 +45,23 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "esbuild": "^0.25.0",
+    "embla-carousel-react": "^8.0.0",
+    "input-otp": "^1.1.0",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
     "openai": "^4.29.1",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.0.12",
     "react-router-dom": "^6.29.0",
+    "recharts": "^2.12.2",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
