--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.39.8",
+    "@types/react-transition-group": "^4.4.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -57,6 +58,7 @@
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.12",
     "react-router-dom": "^6.29.0",
+    "react-transition-group": "^4.4.5",
     "recharts": "^2.12.2",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.5.2",
