--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.39.8",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@types/react-transition-group": "^4.4.12",
+    "@types/react-window": "^1.8.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -59,6 +62,8 @@
     "react-resizable-panels": "^2.0.12",
     "react-router-dom": "^6.29.0",
     "react-transition-group": "^4.4.5",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "recharts": "^2.12.2",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.5.2",
